--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<h1> Zebra </h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Team Password Vault</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 2em; }
+        table { width: 100%; border-collapse: collapse; }
+        th, td { border: 1px solid #ccc; padding: 10px; }
+        th { background: #eee; }
+    </style>
+</head>
+<body>
+    <h1>Team Passwords</h1>
+    <table>
+        <tr><th>Service</th><th>Username</th><th>Password</th></tr>
+        <tr><td>Website A</td><td>user@example.com</td><td>password123</td></tr>
+        <tr><td>Server B</td><td>admin</td><td>securepass456</td></tr>
+    </table>
+</body>
+</html>
