--- a/index.html
+++ b/index.html
@@ -1,20 +1,93 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>Team Password Vault</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 2em; }
-        table { width: 100%; border-collapse: collapse; }
-        th, td { border: 1px solid #ccc; padding: 10px; }
-        th { background: #eee; }
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f4f6f8;
+            margin: 0;
+            padding: 40px;
+        }
+
+        h1 {
+            text-align: center;
+            color: #333;
+            margin-bottom: 20px;
+        }
+
+        table {
+            width: 80%;
+            margin: 0 auto;
+            border-collapse: collapse;
+            background: #fff;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            border-radius: 8px;
+            overflow: hidden;
+        }
+
+        th, td {
+            padding: 15px;
+            text-align: left;
+        }
+
+        th {
+            background-color: #3498db;
+            color: white;
+        }
+
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+
+        td[contenteditable="true"] {
+            background-color: #eaf6ff;
+            cursor: text;
+        }
+
+        .footer {
+            margin-top: 30px;
+            text-align: center;
+            color: #888;
+            font-size: 14px;
+        }
     </style>
 </head>
 <body>
-    <h1>Team Passwords</h1>
-    <table>
-        <tr><th>Service</th><th>Username</th><th>Password</th></tr>
-        <tr><td>Website A</td><td>user@example.com</td><td>password123</td></tr>
-        <tr><td>Server B</td><td>admin</td><td>securepass456</td></tr>
-    </table>
+
+<h1>🔐 Team Password Vault</h1>
+
+<table>
+    <thead>
+        <tr>
+            <th>Service</th>
+            <th>Username</th>
+            <th>Password (Editable)</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Website A</td>
+            <td>user@example.com</td>
+            <td contenteditable="true">password123</td>
+        </tr>
+        <tr>
+            <td>Server B</td>
+            <td>admin</td>
+            <td contenteditable="true">securepass456</td>
+        </tr>
+        <tr>
+            <td>Email C</td>
+            <td>email@example.com</td>
+            <td contenteditable="true">mailpass789</td>
+        </tr>
+    </tbody>
+</table>
+
+<div class="footer">
+    🔒 Only trusted users should edit or view this page.
+</div>
+
 </body>
 </html>
