--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </head>
 <body>
 
-<h1>🔐 Team Password Vault</h1>
+<h1>🔐 TUT Password Vault</h1>
 
 <table>
     <thead>
@@ -86,7 +86,7 @@
 </table>
 
 <div class="footer">
-    🔒 Only trusted users should edit or view this page.
+    🔒 Only TUT members  users should use the login info.
 </div>
 
 </body>
