--- a/index.html
+++ b/index.html
@@ -1,93 +1,236 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Team Password Vault</title>
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f4f6f8;
-            margin: 0;
-            padding: 40px;
-        }
+  <meta charset="UTF-8">
+  <title>Password Vault</title>
 
-        h1 {
-            text-align: center;
-            color: #333;
-            margin-bottom: 20px;
-        }
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.9.0/firebase-firestore.js"></script>
 
-        table {
-            width: 80%;
-            margin: 0 auto;
-            border-collapse: collapse;
-            background: #fff;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            border-radius: 8px;
-            overflow: hidden;
-        }
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
-        th, td {
-            padding: 15px;
-            text-align: left;
-        }
+  <!-- Style -->
+  <style>
+    :root {
+      --bg: #f8f9fa;
+      --primary: #343a40;
+      --accent: #007bff;
+      --card: #ffffff;
+      --danger: #dc3545;
+    }
 
-        th {
-            background-color: #3498db;
-            color: white;
-        }
+    * {
+      box-sizing: border-box;
+    }
 
-        tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: var(--bg);
+      color: var(--primary);
+      padding: 2rem;
+    }
 
-        td[contenteditable="true"] {
-            background-color: #eaf6ff;
-            cursor: text;
-        }
+    .container {
+      max-width: 900px;
+      margin: auto;
+      background: var(--card);
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      padding: 2rem;
+    }
 
-        .footer {
-            margin-top: 30px;
-            text-align: center;
-            color: #888;
-            font-size: 14px;
-        }
-    </style>
+    h2 {
+      text-align: center;
+      margin-bottom: 1.5rem;
+    }
+
+    #login {
+      text-align: center;
+    }
+
+    #login input {
+      padding: 0.6rem 1rem;
+      font-size: 1rem;
+      width: 250px;
+      margin-bottom: 1rem;
+    }
+
+    #login button {
+      padding: 0.6rem 1.2rem;
+      font-size: 1rem;
+      background: var(--accent);
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    #login button:hover {
+      background: #0056b3;
+    }
+
+    #loginError {
+      color: var(--danger);
+      margin-top: 0.5rem;
+    }
+
+    #dashboard {
+      display: none;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 1rem;
+    }
+
+    th, td {
+      padding: 12px 16px;
+      border-bottom: 1px solid #ddd;
+      text-align: left;
+    }
+
+    th {
+      background: var(--primary);
+      color: white;
+    }
+
+    td input {
+      width: 100%;
+      padding: 6px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+
+    td a {
+      color: var(--accent);
+      text-decoration: none;
+    }
+
+    td a:hover {
+      text-decoration: underline;
+    }
+
+    .icon {
+      margin-right: 6px;
+    }
+
+    @media (max-width: 600px) {
+      table, thead, tbody, th, td, tr {
+        display: block;
+      }
+
+      tr {
+        margin-bottom: 1rem;
+      }
+
+      th, td {
+        text-align: right;
+        padding-left: 50%;
+        position: relative;
+      }
+
+      th::before, td::before {
+        position: absolute;
+        left: 16px;
+        width: 45%;
+        white-space: nowrap;
+        text-align: left;
+        font-weight: bold;
+      }
+
+      th:nth-child(1)::before { content: "Website"; }
+      th:nth-child(2)::before { content: "Username"; }
+      th:nth-child(3)::before { content: "Password"; }
+      th:nth-child(4)::before { content: "Link"; }
+
+      td:nth-child(1)::before { content: "Website"; }
+      td:nth-child(2)::before { content: "Username"; }
+      td:nth-child(3)::before { content: "Password"; }
+      td:nth-child(4)::before { content: "Link"; }
+    }
+  </style>
 </head>
 <body>
 
-<h1>🔐 TUT Password Vault</h1>
+  <div class="container">
+    <h2><i class="fas fa-lock icon"></i>Password Vault</h2>
 
-<table>
-    <thead>
-        <tr>
-            <th>Service</th>
-            <th>Username</th>
-            <th>Password (Editable)</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>Website A</td>
-            <td>user@example.com</td>
-            <td contenteditable="true">password123</td>
-        </tr>
-        <tr>
-            <td>Server B</td>
-            <td>admin</td>
-            <td contenteditable="true">securepass456</td>
-        </tr>
-        <tr>
-            <td>Email C</td>
-            <td>email@example.com</td>
-            <td contenteditable="true">mailpass789</td>
-        </tr>
-    </tbody>
-</table>
+    <div id="login">
+      <input type="password" id="loginKey" placeholder="Enter Access Key" />
+      <br>
+      <button onclick="checkLogin()"><i class="fas fa-sign-in-alt icon"></i>Login</button>
+      <p id="loginError"></p>
+    </div>
 
-<div class="footer">
-    🔒 Only TUT members  users should use the login info.
-</div>
+    <div id="dashboard">
+      <h3><i class="fas fa-database icon"></i>Stored Credentials</h3>
+      <table id="dataTable">
+        <thead>
+          <tr>
+            <th><i class="fas fa-globe icon"></i>Website</th>
+            <th><i class="fas fa-user icon"></i>Username</th>
+            <th><i class="fas fa-key icon"></i>Password</th>
+            <th><i class="fas fa-link icon"></i>Link</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
+  </div>
+
+  <script>
+    const firebaseConfig = {
+      apiKey: "YOUR_API_KEY",
+      authDomain: "YOUR_PROJECT.firebaseapp.com",
+      projectId: "YOUR_PROJECT_ID"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
+
+    const MASTER_KEY = "letmein"; // Change this to your access key
+
+    function checkLogin() {
+      const inputKey = document.getElementById("loginKey").value;
+      if (inputKey === MASTER_KEY) {
+        document.getElementById("login").style.display = "none";
+        document.getElementById("dashboard").style.display = "block";
+        loadData();
+      } else {
+        document.getElementById("loginError").innerText = "Invalid Key!";
+      }
+    }
+
+    function loadData() {
+      const tbody = document.querySelector("#dataTable tbody");
+      db.collection("accounts").onSnapshot((snapshot) => {
+        tbody.innerHTML = "";
+        snapshot.forEach(doc => {
+          const data = doc.data();
+          const tr = document.createElement("tr");
+
+          tr.innerHTML = `
+            <td>${data.website}</td>
+            <td>${data.username}</td>
+            <td>
+              <input type="password" value="${data.password}" onchange="updatePassword('${doc.id}', this.value)" />
+            </td>
+            <td><a href="${data.link}" target="_blank"><i class="fas fa-external-link-alt icon"></i>Visit</a></td>
+          `;
+          tbody.appendChild(tr);
+        });
+      });
+    }
+
+    function updatePassword(docId, newPassword) {
+      db.collection("accounts").doc(docId).update({ password: newPassword })
+        .then(() => console.log("Password updated"))
+        .catch(err => console.error("Error updating:", err));
+    }
+  </script>
 
 </body>
 </html>
