--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
 
-    const MASTER_KEY = "letmein"; // Change this to your access key
+    const MASTER_KEY = "zebatribe"; // Change this to your access key
 
     function checkLogin() {
       const inputKey = document.getElementById("loginKey").value;
