--- a/index.html
+++ b/index.html
@@ -161,9 +161,13 @@
   <script>
     // Replace with your own Firebase config
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT.firebaseapp.com",
-      projectId: "YOUR_PROJECT_ID"
+    apiKey: "AIzaSyAdQXobYdViArKQqLn2GYa1hzzhPU2YTwI",
+    authDomain: "zebrapassword.firebaseapp.com",
+    projectId: "zebrapassword",
+    storageBucket: "zebrapassword.firebasestorage.app",
+    messagingSenderId: "326302828139",
+    appId: "1:326302828139:web:8f1a856fde52b26fb5d32e",
+    measurementId: "G-G1NNTMSGE6"
     };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
