--- a/index.html
+++ b/index.html
@@ -124,14 +124,14 @@
 <body>
 
   <div class="container">
-    <h2><i class="fas fa-lock icon"></i> Password Vault</h2>
+<!--     <h2><i class="fas fa-lock icon"></i> Password Vault</h2>
 
     <div id="login">
       <input type="password" id="loginKey" placeholder="Enter Access Key" />
       <br>
       <button onclick="checkLogin()"><i class="fas fa-sign-in-alt icon"></i> Login</button>
       <p id="loginError"></p>
-    </div>
+    </div> -->
 
     <div id="dashboard">
       <h3><i class="fas fa-database icon"></i> Saved Credentials</h3>
