--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
 </head>
 <body>
 
-  <div class="container">
-<!--     <h2><i class="fas fa-lock icon"></i> Password Vault</h2>
+<!--   <div class="container">
+    <h2><i class="fas fa-lock icon"></i> Password Vault</h2>
 
     <div id="login">
       <input type="password" id="loginKey" placeholder="Enter Access Key" />
