--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
   // TODO: Add SDKs for Firebase products that you want to use
   // https://firebase.google.com/docs/web/setup#available-libraries
 
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  const firebaseConfig = {
-    apiKey: "AIzaSyAdQXobYdViArKQqLn2GYa1hzzhPU2YTwI",
-    authDomain: "zebrapassword.firebaseapp.com",
-    projectId: "zebrapassword",
-    storageBucket: "zebrapassword.firebasestorage.app",
-    messagingSenderId: "326302828139",
-    appId: "1:326302828139:web:8f1a856fde52b26fb5d32e",
-    measurementId: "G-G1NNTMSGE6"
-  };
+  // // Your web app's Firebase configuration
+  // // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  // const firebaseConfig = {
+  //   apiKey: "AIzaSyAdQXobYdViArKQqLn2GYa1hzzhPU2YTwI",
+  //   authDomain: "zebrapassword.firebaseapp.com",
+  //   projectId: "zebrapassword",
+  //   storageBucket: "zebrapassword.firebasestorage.app",
+  //   messagingSenderId: "326302828139",
+  //   appId: "1:326302828139:web:8f1a856fde52b26fb5d32e",
+  //   measurementId: "G-G1NNTMSGE6"
+  // };
 
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const analytics = getAnalytics(app);
+  // // Initialize Firebase
+  // const app = initializeApp(firebaseConfig);
+  // const analytics = getAnalytics(app);
 </script>
 
   <!-- Icons -->
