--- a/index.html
+++ b/index.html
@@ -5,29 +5,9 @@
   <title>Password Vault</title>
 
   <!-- Firebase -->
-  <script type="module">
-  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-analytics.js";
-  // TODO: Add SDKs for Firebase products that you want to use
-  // https://firebase.google.com/docs/web/setup#available-libraries
-
-  // // Your web app's Firebase configuration
-  // // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  // const firebaseConfig = {
-  //   apiKey: "AIzaSyAdQXobYdViArKQqLn2GYa1hzzhPU2YTwI",
-  //   authDomain: "zebrapassword.firebaseapp.com",
-  //   projectId: "zebrapassword",
-  //   storageBucket: "zebrapassword.firebasestorage.app",
-  //   messagingSenderId: "326302828139",
-  //   appId: "1:326302828139:web:8f1a856fde52b26fb5d32e",
-  //   measurementId: "G-G1NNTMSGE6"
-  // };
-
-  // // Initialize Firebase
-  // const app = initializeApp(firebaseConfig);
-  // const analytics = getAnalytics(app);
-</script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
 
   <!-- Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
